--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,7 +55,8 @@
 							<article id="work">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/code.jpg" alt="" /></span>
-								<p><a href="">Sweet Eats Bakery</a></p>
+								<p><a href="#">Sweet Eats Bakery</a></p> 
+								<!-- ^^^ Didn't get around to getting this link working! Would I have to host my other projects on GitHub as well? -->
 							</article>
 
 						<!-- About -->
